Mon Jan 30 10:17:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compression/Compression_Test.mpc:
          Added missing base project

        * tests/POA/FindPOA/Adapter_Activator.h:
        * tests/POA/FindPOA/Adapter_Activator.cpp:
        * tests/POA/FindPOA/FindPOA.cpp:
          Moved the adapter activator to this test

        * tao/PortableServer/Adapter_Activator.h:
        * tao/PortableServer/Adapter_Activator.cpp:
          Removed these files, shouldn't be part of the core

Mon Jan 30 09:48:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Transport.cpp:
          Redefined MIOP_MAX_DGRAM_SIZE to use the ACE_MAX_UDP_PACKET_SIZE
          instead of the much more limited ACE_MAX_DGRAM_SIZE.
          There are still other inherent problems with large MIOP packets
          but at least the end user can try and send any reasonable length.

Fri Jan 27 18:47:34 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compression/RLECompressorTest.cpp:
        * tests/ZIOP/TestCompressor/TestCompressor.h:
        * tests/ZIOP/TestCompressor/TestCompressor.cpp:
          Fixed compile errors

Fri Jan 27 10:51:42 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IORManipulation/IORManipulation.cpp:
          Fixed gcc 4.7 warning

Fri Jan 27 10:26:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/rlecompressor.mpb:
          No requires

        * tests/Compression/Compression_Test.mpc:
        * tests/Compression/RLECompressorTest.cpp:
        * tests/Compression/bzip2server.cpp:
        * tests/Compression/run_test.pl:
          Added rle test

Fri Jan 27 09:48:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/rlecompressor.mpb:
        * tao/Compression/rle/RLECompressor.h:
        * tao/Compression/rle/RLECompressor.cpp:
        * tao/Compression/rle/RLECompressor.mpc: